# AI_PM

./: .gitignore  .impeccable.md  AGENTS.md  AI_PM_教程中心.html  AI_PM_新手教程.html  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  README_zh-CN.md  latest.json  启动 AI PM.command
.ai-shared/: README.md  agent-index.md  memory-index.md  skill-index.md
.ai-shared/context/: README.md  open-questions.md  product-decisions.md
.ai-shared/pending-memory/: README.md  codex-20260426-ai-collaboration-mode.md
.archive/: README.md
.claude/: settings.json
.claude/agents/: pm-agent.md  prototype-agent.md
.claude/hooks/: .knowledge-capture.enabled.example  knowledge-capture.sh  memory-backup.sh  session-start.sh  skill-sync-check.sh  test-knowledge-capture.sh
.claude/skills/: settings.local.json
.github/workflows/: release.yml
app/: index.html  package-lock.json  package.json  playwright.config.ts
app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/: plaza-manifest.json
app/src-tauri/resources/skills/ai-pm-pptx/references/: design-system.md  qa-workflow.md
app/src-tauri/resources/skills/ai-pm-pptx/scripts/: prd2pptx.py  verify.py
app/src-tauri/resources/skills/ai-pm-review/: SKILL.md
app/src-tauri/resources/skills/ai-pm-review-modify/: SKILL.md
app/src-tauri/resources/templates/: share-template.html
app/src-tauri/resources/templates/project-types/internal/: prompt-overrides.json
app/src-tauri/resources/templates/project-types/to-b/: prompt-overrides.json
app/src-tauri/resources/templates/project-types/to-c/: prompt-overrides.json
app/src-tauri/src/: db.rs  lib.rs  main.rs  state.rs
app/src-tauri/src/commands/: brainstorm.rs  config.rs  env.rs  files.rs  illustration.rs  instincts.rs  knowledge.rs  mod.rs  plaza.rs  pptx.rs  projects.rs  prototype_context.rs  stream.rs  templates.rs  tools.rs  update.rs
app/src-tauri/src/providers/: ai_call.rs  anthropic.rs  claude_cli.rs  mod.rs  openai.rs
docs/: 2026-04-26-edu-super-agent-status.md  2026-04-26-pm-agent-system.md  design-system.md
scripts/: cleanup-auto-cards.sh  knowledge-hook-weekly-report.sh  tag-release.sh  verify-release.sh
templates/: README.md
web/: README.md  drizzle.config.ts  package.json
(+470 files in other folders)
