[package]
name = "ai-pm"
version = "0.5.1"
edition = "2021"

[lib]
name = "ai_pm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
async-trait = "0.1"
tauri-plugin-updater = "2"
zip = "2"
walkdir = "2"
quick-xml = "0.37"
regex = "1"
once_cell = "1"
image = "0.25"
base64 = "0.22"
dotenvy = "0.15"
